<resources>

    <string name="text">Hello world</string>

    <string name="app_name">QuickTalk</string>
    <string name="title_activity_select">Select</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_sound">Sound</string>
    <string name="pref_autoplay">Autoplay</string>
    <string name="pref_reset">Reset</string>

    <string name="autoplay">Autoplay</string>
    <string name="autoplay_desciption">...</string>

    <string name="disable_autolock">Prevent Lock Screen</string>
    <string name="disable_autolock_description">...</string>

    <string name="sound">Sound</string>
    <string name="front_voice">Front</string>
    <string name="back_voice">Back</string>
    <string name="reset">Reset All Settings</string>]
    <string name="speed">Speed</string>
    <string name="after_action">After Complete</string>

    <string-array name="pref_speed_titles">
        <item>Very Slow</item>
        <item>Slow</item>
        <item>Normal</item>
        <item>Fast</item>
    </string-array>

    <integer-array name="pref_speed_values">
        <item>400</item>
        <item>200</item>
        <item>100</item>
        <item>50</item>
    </integer-array>

    <string-array name="pref_after_action_titles">
        <item>Stop</item>
        <item>Random</item>
        <item>Repeat</item>
    </string-array>

    <string-array name="pref_after_action_values">
        <item>Stop</item>
        <item>Random</item>
        <item>Repeat</item>
    </string-array>

    <string-array name="pref_voice_titles">
        <item>English</item>
        <item>German</item>
        <item>Italian</item>
        <item>Spanish</item>
        <item>Russian</item>
    </string-array>

    <string-array name="pref_voice_values">
        <item>en</item>
        <item>de</item>
        <item>it</item>
        <item>es</item>
        <item>ru</item>
    </string-array>

</resources>
