<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="autoplay"
        android:title="@string/autoplay" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_speed_titles"
        android:entryValues="@array/pref_speed_values"
        android:key="speed"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/speed" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="disable_auto_lock"
        android:title="@string/disable_autolock" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_after_action_titles"
        android:entryValues="@array/pref_after_action_values"
        android:key="after_action"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/after_action" />

</PreferenceScreen>
