<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="sound"
        android:title="@string/sound" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_voice_titles"
        android:entryValues="@array/pref_voice_values"
        android:key="front_voice"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/front_voice" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_voice_titles"
        android:entryValues="@array/pref_voice_values"
        android:key="back_voice"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/back_voice" />

</PreferenceScreen>
